--- a/script/dark.css
+++ b/script/dark.css
@@ -1,3 +1,12 @@
+html{
+    user-select: none; /* supported by Chrome and Opera */
+   -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+   -moz-user-select: none; /* Firefox */
+   -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
+
 .header-ub {
     padding-top: 15%;
     text-align: center;
